Blurred Fixed Background

--- a/fileadmin/templates/css/skrill-transparency.scss
+++ b/fileadmin/templates/css/skrill-transparency.scss
@@ -235,6 +235,17 @@ main .row.transparent > * > .circle {
 	
 }
 
+.fixed-background.blur {
+	
+	-webkit-filter: blur(5px);
+	-moz-filter: blur(5px);
+	-o-filter: blur(5px);
+	-ms-filter: blur(5px);
+	filter: blur(5px);
+    background-size: cover;
+
+}
+
 /* Overlay Icon: Additional smaller icon on at the bottom-left of a hole with icon */
 
 .transparent .circle * ~ * {
